# opinion-builder-tools

./: README.md
backend/: .env.example  README.md  pyproject.toml
backend/opinion_builder/: config.py  main.py
backend/opinion_builder/api/v1/: health.py  topics.py
backend/opinion_builder/models/: error.py  filter.py  topic.py  websocket.py
backend/opinion_builder/sdk/: client.py
backend/opinion_builder/services/: cache_service.py  topic_service.py
backend/opinion_builder/websocket/: consumer.py
docs/: spec.md
